<resources>
    <string name="app_name">WhatsApp Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whatsapp_splash_logo">whatsapp_splash_logo</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="enter_your_name">Enter Your Name :</string>
    <string name="enter_your_email">Enter Your Email :</string>
    <string name="enter_your_password">Enter Your Password :</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="create_an_new_account">Create An new Account </string>
    <string name="sign_in">Sign In</string>
    <string name="developer_satyam_singh">Developer :: Satyam Singh</string>
    <string name="chats_tab">CHATS</string>
    <string name="status_tab">STATUS</string>
    <string name="calls_tab">CALLS</string>
    <string name="action_group_chat">Group Chat</string>
    <string name="action_new_broadcast">New Broadcast</string>
    <string name="action_linked_devices">Linked Devices</string>
    <string name="action_starred_messages">Starred messages</string>
    <string name="action_payments">Payments</string>
    <string name="action_debit_card">Debit Card</string>
    <string name="action_credit_card">Credit Card</string>
    <string name="action_net_banking">Net Banking</string>
    <string name="please_wait">Please Wait</string>
    <string name="email_required">Email Required!</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="password_required">Password Required!</string>
    <string name="username_required">Username Required!</string>
    <string name="password_length_error">Password length must be greater or equal to 6!</string>
    <string name="user_created_successfully">User Created Successfully</string>
    <string name="creating_account">Creating Account</string>
    <string name="creating_your_account">We\'re creating your account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">Login</string>
    <string name="action_log_out">Log out</string>
    <string name="user_log_out">User Log Out</string>
    <string name="request_token_id">150087040940-0otnuhbqmjvskhdvp2geqojku3uee9cq.apps.googleusercontent.com</string>
    <string name="error">Error : </string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="google_sign_out_failed">Google sign out failed</string>
    <string name="logout_successfully">logout Successfully</string>
    <string name="success">Success</string>
    <string name="verification_email_sent">Verification Email has been sent</string>
    <string name="email_not_verified">Your email is not verified</string>
    <string name="no_record_found">No Records Found</string>
    <string name="you_are_currently_offline">You are currently offline!</string>
    <string name="last_message">last message</string>
    <string name="userId">userId</string>
    <string name="username">username</string>
    <string name="status">status</string>
    <string name="profileImage">profileImage</string>
    <string name="message">Message</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Do you want to delete this message ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="sent_message_status">"Sent Message Status : "</string>
    <string name="failure">Failure</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="bottom_sheet_tag">Bottom Sheet Tag</string>
    <string name="profile_setting">Profile Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="user_log_out_message">Do you really want to do log out ?</string>
    <string name="http">http</string>
    <string name="remove_profile">Remove Profile</string>
    <string name="remove_profile_photo">Remove Profile Photo ?</string>
    <string name="receiver_id">receiverId</string>
    <string name="receiver_name">receiverName</string>
    <string name="profile_picture_removed">Profile Picture Removed</string>
    <string name="profile_picture_updated">Profile Picture Updated</string>
    <string name="SimpleDateFormat">HH:mm</string>
    <string name="no_internet_tab">No Internet Connection</string>
    <string name="try_these_steps_to_get_back_online">Try these Steps to get back online</string>
    <string name="check_your_modem_and_router">Check your Modem and Router</string>
    <string name="reconnect_to_wifi">Reconnect to Wifi</string>
    <string name="reload">Reload</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="so_we_know_you_are_real">so we know you are real</string>
    <string name="add_your_phone_number_we_ll_send_you_a_verification_code">Add your phone number, we\'ll send you a verification code</string>
    <string name="country_code">+91</string>
    <string name="enter_valid_number">Enter Valid Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="please_enter_otp">Please Enter OTP</string>
    <string name="please_check_connection">Please Check Connection</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="verification_successful">Verification successful</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="whatsapp">whatsapp</string>
    <string name="verification">Verification</string>
    <string name="enter_otp_value">Enter OTP Value</string>
    <string name="starred_messages">Starred Messages</string>
    <string name="hey_there_i_am_using_whatsapp">Hey there! I am using WhatsApp</string>
    <string name="profilePicture">profilePicture</string>
    <string name="not_verified">Not Verified</string>
    <string name="verified">Verified</string>
    <string name="phone">Phone</string>
    <string name="tap_to_chat">Tap to Chat</string>
    <string name="satyam_singh">Satyam Singh</string>
    <string name="developer">Developer</string>
    <string name="message_deleted_successfully">Message Deleted Successfully</string>
    <string name="message_removed_successfully">Message Removed Successfully</string>
    <string name="no_star_message">No Star Message</string>
    <string name="date_format_ymd">yyyy-MM-dd</string>
    <string name="date_and_time_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="firebase_url">https://firebasestorage.googleapis.com/</string>
    <string name="your_phone">Your Phone</string>
    <string name="your_about">Your About</string>
    <string name="your_full_name">Your Full Name*</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="restart_your_app">Restart Your App!</string>
    <string name="connection_status_failed">Connection Status :false</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="uploading">Uploading</string>
    <string name="copied">Copied!</string>
    <string name="copy">Copy</string>
    <string name="star">Star</string>
    <string name="sort">Sort</string>
    <string name="ascending_order">Ascending Order</string>
    <string name="descending_order">Descending Order</string>
    <string name="select_sort_order">Select Sort Order :</string>
</resources>