<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="18dp"
    android:background="@color/lightGrey"
    tools:context=".ui.activities.SignUpActivity">


    <ImageView
        android:layout_width="110dp"
        android:layout_height="105dp"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/whatsapp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_your_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_your_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:hint="@string/enter_your_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_already_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:singleLine="true"
        android:text="@string/already_have_an_account" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:cornerRadius="4dp" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="?android:attr/listDivider">


    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:backgroundTint="#FAF8F8"
            android:drawableLeft="@drawable/google"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/google"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="4dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:backgroundTint="@color/fb_color"
            android:drawableLeft="@drawable/facebook"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/facebook"
            android:textAllCaps="false"
            app:cornerRadius="4dp" />

    </LinearLayout>


</LinearLayout>