<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.activities.SignInActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="110dp"
        android:layout_height="105dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/whatsapp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_your_email"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:hint="@string/enter_your_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/create_an_new_account" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:cornerRadius="4dp" />


    <View
        android:id="@+id/divider"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" >

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:backgroundTint="#FAF8F8"
            android:drawableLeft="@drawable/google"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="4dp"
            app:strokeWidth="2dp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:backgroundTint="@color/fb_color"
            android:drawableLeft="@drawable/facebook"
            android:padding="10dp"
            android:text="@string/facebook"
            android:textAllCaps="false"
            app:cornerRadius="4dp" />

    </LinearLayout>

</LinearLayout>