<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.activities.HomeActivity">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="105dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/whatsapp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_go_to_sign_in_activity"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:cornerRadius="4dp" />

    <Button
        android:id="@+id/btn_go_to_sign_up_activity"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:cornerRadius="4dp" />

</LinearLayout>