<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/lightGrey"
    android:orientation="vertical"
    tools:context=".ui.activities.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_edit_profile_setup"
            android:layout_width="185dp"
            android:layout_height="185dp"
            android:src="@drawable/man"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </de.hdodenhof.circleimageview.CircleImageView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_edit_profile_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@+id/civ_edit_profile_setup"
            app:layout_constraintEnd_toEndOf="@+id/civ_edit_profile_setup"
            app:tint="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_full_name_setup"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_sent_message_edit_text"
            android:drawableRight="@drawable/ic_edit"
            android:drawableTint="@color/black"
            android:hint="@string/your_full_name"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_about_setup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_sent_message_edit_text"
            android:drawableRight="@drawable/ic_edit"
            android:drawableTint="@color/black"
            android:hint="@string/your_about"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ll_verify_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_sent_message_edit_text"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:text="Verification Status : "
                android:textColor="@color/purple_700"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_account_verification_status_setup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg"
                android:backgroundTint="@color/purple_700"
                android:padding="8dp"
                android:text="Verified"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_profile_setup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:elevation="6dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_skip_for_now_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/skip_for_now"
            android:textAlignment="center"
            android:textSize="14dp" />


    </LinearLayout>


</LinearLayout>